# daisy-embassy

./: CONTIBUTING.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: _minimum_flash.rs  _minimum_sai.rs  _usb_uac.rs  adc.rs  fhx.rs  flash.rs  looper.rs  passthrough.rs  triangle_wave_tx.rs  usb_midi.rs  usb_serial.rs  usb_uac.rs
examples/faust/simple-gain/: Cargo.toml  README.md  build.rs
examples/faust/simple-gain/.cargo/: config.toml
examples/faust/simple-gain/src/: main.rs
src/: audio.rs  board.rs  flash.rs  led.rs  lib.rs  sdram.rs  usb.rs
src/codec/: ak4556.rs  mod.rs  pcm3060.rs  pcm3060_i2c.rs  wm8731.rs
src/pins/: mod.rs  pins_patch_sm.rs  pins_seed.rs
